--- a/index.html
+++ b/index.html
@@ -119,22 +119,29 @@
                         <a href="https://tiwarihritika.github.io/Netflix-Clone/"><i class='bx bx-link-external'></i></a>
                    </div>
                  </div>
-                   <div class="workk">
+                 <div class="workk">
                    <img src="prr1.jpg" alt="project2"><div class="layer">
+                     <h3>Dictionary API</h3>
+                     <p>Dictionary API ,which includes word meaning.</p>
+                     <a href="https://tiwarihritika.github.io/Dictionary-API/"><i class='bx bx-link-external'></i></a>
+                 </div>
+                 </div>
+                   <div class="workk">
+                   <img src="pr3.jpg" alt="project3"><div class="layer">
                      <h3>Tic-Tac-Toe</h3>
                      <p>Tic Tac Toe Game. Technologies used-1 >> Javascript, HTML,CSS.</p>
                      <a href="https://tiwarihritika.github.io/tictactoe/"><i class='bx bx-link-external'></i></a>
                  </div>
                  </div>
                    <div class="workk">
-                   <img src="pr3.jpg" alt="project3"><div class="layer">
+                   <img src="prr1.jpg" alt="project4"><div class="layer">
                      <h3>Password Generator</h3>
                      <p>It will generate random passwords.Technologies used-HTML,CSS,Javascript</p>
                      <a href="https://tiwarihritika.github.io/Password-Generator/"><i class='bx bx-link-external'></i></a>
                  </div>
                  </div>
                  <div class="workk">
-                   <img src="prr1.jpg" alt="project3"><div class="layer">
+                   <img src="pr3.jpg" alt="project5"><div class="layer">
                      <h3>Tic Tac Toe</h3>
                      <p>Tic tac toe game using Python</p>
                      <a href="https://github.com/TiwariHRitika/Tic-Tac-Toe"><i class='bx bx-link-external'></i></a>
